@@ -304,203 +304,203 @@ notrans_man3_MANS = \
 	dwarf_set_frame_undefined_value.3
 
 dwarf_add_AT_const_value_signedint.3: dwarf_add_AT_const_value_string.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_add_AT_const_value_unsignedint.3: dwarf_add_AT_const_value_string.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_add_AT_unsigned_const.3: dwarf_add_AT_signed_const.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_add_AT_targ_address_b.3: dwarf_add_AT_targ_address.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_add_arange_b.3: dwarf_add_arange.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_add_expr_addr_b.3: dwarf_add_expr_addr.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_add_frame_fde_b.3: dwarf_add_frame_fde.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_attrval_flag.3: dwarf_attrval_signed.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_attrval_string.3: dwarf_attrval_signed.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_attrval_unsigned.3: dwarf_attrval_signed.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_offdie.3: dwarf_child.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_siblingof.3: dwarf_child.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_fde_cie_list_dealloc.3: dwarf_dealloc.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_funcs_dealloc.3: dwarf_dealloc.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_globals_dealloc.3: dwarf_dealloc.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_pubtypes_dealloc.3: dwarf_dealloc.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_types_dealloc.3: dwarf_dealloc.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_vars_dealloc.3: dwarf_dealloc.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_weaks_dealloc.3: dwarf_dealloc.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_ranges_dealloc.3: dwarf_dealloc.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_srclines_dealloc.3: dwarf_dealloc.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_elf_init.3: dwarf_init.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_die_CU_offset.3: dwarf_dieoffset.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_die_CU_offset_range.3: dwarf_dieoffset.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_cu_die_offset_given_cu_header_offset.3: dwarf_dieoffset.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_object_finish.3: dwarf_finish.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_global_formref.3: dwarf_formref.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_formsdata.3: dwarf_formudata.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_ACCESS_name.3: dwarf_get_AT_name.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_ATE_name.3: dwarf_get_AT_name.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_CC_name.3: dwarf_get_AT_name.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_CFA_name.3: dwarf_get_AT_name.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_CHILDREN_name.3: dwarf_get_AT_name.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_DS_name.3: dwarf_get_AT_name.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_DSC_name.3: dwarf_get_AT_name.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_EH_name.3: dwarf_get_AT_name.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_END_name.3: dwarf_get_AT_name.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_FORM_name.3: dwarf_get_AT_name.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_ID_name.3: dwarf_get_AT_name.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_INL_name.3: dwarf_get_AT_name.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_LANG_name.3: dwarf_get_AT_name.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_LNE_name.3: dwarf_get_AT_name.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_LNS_name.3: dwarf_get_AT_name.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_MACINFO_name.3: dwarf_get_AT_name.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_OP_name.3: dwarf_get_AT_name.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_ORD_name.3: dwarf_get_AT_name.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_TAG_name.3: dwarf_get_AT_name.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_VIRTUALITY_name.3: dwarf_get_AT_name.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_VIS_name.3: dwarf_get_AT_name.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_arange_cu_header_offset.3: dwarf_get_cu_die_offset.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_fde_list_eh.3: dwarf_get_fde_list.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_func_die_offset.3: dwarf_get_funcs.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_func_cu_offset.3: dwarf_get_funcs.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_func_name_offsets.3: dwarf_get_funcs.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_funcname.3: dwarf_get_funcs.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_global_die_offset.3: dwarf_get_globals.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_global_cu_offset.3: dwarf_get_globals.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_global_name_offsets.3: dwarf_get_globals.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_globname.3: dwarf_get_globals.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_pubtype_die_offset.3: dwarf_get_pubtypes.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_pubtype_cu_offset.3: dwarf_get_pubtypes.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_pubtype_name_offsets.3: dwarf_get_pubtypes.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_pubtypename.3: dwarf_get_pubtypes.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_get_ranges_a.3: dwarf_get_ranges.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_type_die_offset.3: dwarf_get_types.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_type_cu_offset.3: dwarf_get_types.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_type_name_offsets.3: dwarf_get_types.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_typename.3: dwarf_get_types.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_var_die_offset.3: dwarf_get_vars.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_var_cu_offset.3: dwarf_get_vars.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_var_name_offsets.3: dwarf_get_vars.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_varname.3	: dwarf_get_vars.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_weak_die_offset.3: dwarf_get_weaks.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_weak_cu_offset.3: dwarf_get_weaks.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_weak_name_offsets.3: dwarf_get_weaks.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_weakname.3: dwarf_get_weaks.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_whatform.3: dwarf_hasform.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_whatform_direct.3: dwarf_hasform.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_arrayorder.3: dwarf_highpc.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_bitoffset.3: dwarf_highpc.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_bitsize.3: dwarf_highpc.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_bytesize.3: dwarf_highpc.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_lowpc.3: dwarf_highpc.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_srclang.3: dwarf_highpc.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_lineaddr.3: dwarf_lineno.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_linebeginstatement.3: dwarf_lineno.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_lineblock.3: dwarf_lineno.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_lineendsequence.3: dwarf_lineno.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_lineoff.3: dwarf_lineno.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_linesrc.3: dwarf_lineno.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_line_srcfileno.3: dwarf_lineno.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_loclist_n.3: dwarf_loclist.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_loclist_from_expr_a.3: dwarf_loclist_from_expr.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_producer_init_b.3: dwarf_producer_init.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_seterrhand.3: dwarf_seterrarg.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_set_frame_rule_initial_value.3: dwarf_set_frame_cfa_value.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_set_frame_rule_table_size.3: dwarf_set_frame_cfa_value.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_set_frame_same_value.3: dwarf_set_frame_cfa_value.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 dwarf_set_frame_undefined_value.3: dwarf_set_frame_cfa_value.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 
 dwarf_pubnames.c:	dwarf_nametbl.m4 dwarf_pubnames.m4
 dwarf_pubtypes.c:	dwarf_nametbl.m4 dwarf_pubtypes.m4
@@ -516,5 +516,5 @@ dwarf_pro_vars.c:	dwarf_pro_nametbl.m4 dwarf_pro_vars.m4
 
 SUFFIXES = .m4
 .m4.c:
-	m4 -D SRCDIR=${top_srcdir}/libdwarf $< > $@
+	$(AM_V_GEN)m4 -D SRCDIR=${top_srcdir}/libdwarf $< > $@
 
